syntax = "proto3";

package incident;

service IncidentAlertService {
  rpc SubscribeToIncidentAlerts(AlertRequest) returns (stream AlertResponse) {}
}

message AlertRequest {
}

message AlertResponse {
  string incidentLocation = 1;
  string advice = 2;
}
